<resources>
    <string name="app_name">Welike</string>
    <string name="colon">:</string>
    <string name="test">this is test string</string>
    <string name="gif_tag_text">GIF</string>
    <string name="webp_tag_text">WEBP</string>
    <string name="topic_mark">#</string>
    <string name="india">India</string>
    <string name="poll">poll</string>
    <string name="views">Views&#160;</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="profile_link_facebook">https://www.facebook.com/BBkiVines</string>
    <string name="profile_link_instagram"> https://www.instagram.com/bhuvan.bam22</string>
    <string name="profile_link_youtube">https://www.youtube.com/channel/UCqwUrj10mAE\nhttps://www.youtube.com/user/tseries</string>
    <string name="example">eg. </string>
    <string name="report_email_address">copyright@welike.in</string>
    <string name="report_email_subject">Copyrights Problem Report</string>
    <string name="report_email_content">Hi Welike Official \n \n &#160;&#160;&#160;&#160; I noticed that the following post with the post link: %s, has copyright issue. In order to protect peoples copyrights, request you to resolve this problem. Thanks!</string>
    <string name="user_sex_boy">Male</string>
    <string name="refresh_header_default_finish">Refreshed&#160;successfully</string>
    <string name="refresh_header_release">Release&#160;to&#160;refresh</string>
    <string name="user_sex_girl">Female</string>
    <string name="refresh_header_failed">Refresh&#160;failed</string>
    <string name="common_error_text">Network Error. Please Try Again</string>
    <string name="refresh_header_refreshing">Refreshing</string>
    <string name="refresh_header_pulldown">Pull&#160;to&#160;refresh</string>
    <string name="common_reload_text">Refresh</string>
    <string name="common_ok">OK</string>
    <string name="common_cancel">Cancel</string>
    <string name="common_me_share_content_two">&#160;followers&#160;and&#160;my&#160;overall&#160;ranking&#160;is&#160;No.</string>
    <string name="common_me_share_content_four">&#160;people,want&#160;to&#160;check&#160;my&#160;interesting&#160;post?&#160;Find&#160;my&#160;nickname&#160;</string>
    <string name="common_me_out_three_hundred_share_content_one">Want&#160;see&#160;my&#160;interesting&#160;post&#160;on&#160;Welike?&#160;Come&#160;to&#160;be&#160;my&#160;friend</string>
    <string name="common_feed_detail_share_content">Interesting&#160;post&#160;from&#160;Welike,&#160;share&#160;to&#160;you</string>
    <string name="common_share_content_copyed">Copied&#160;to&#160;clipboard</string>
    <string name="common_confirm">Confirm</string>
    <string name="common_me_share_content_three">&#160;on&#160;Welike,surpassed&#160;</string>
    <string name="common_me_share_content_one">I&#160;have&#160;got&#160;</string>
    <string name="common_me_out_three_hundred_share_content_two">and&#160;let\'s&#160;share&#160;interesting&#160;story&#160;together.&#160;My&#160;nickname&#160;is&#160;</string>
    <string name="common_error_ssl_cert_invalid">This&#160;website&#160;may&#160;have&#160;security&#160;risks.&#160;Do&#160;you&#160;wish&#160;to&#160;continue?</string>
    <string name="no_more">No&#160;more</string>
    <string name="load_error">Loading&#160;error.Please&#160;try&#160;again</string>
    <string name="loading">loading</string>
    <string name="all">all</string>
    <string name="post">Post</string>
    <string name="go_back">Go&#160;back</string>
    <string name="topic">Topic</string>
    <string name="follow_btn_text">Follow</string>
    <string name="friends_btn_text">Friends</string>
    <string name="following_btn_text">Following</string>
    <string name="back_to_top">Back&#160;to&#160;top</string>
    <string name="refreshed">Refreshed</string>
    <string name="sort_hot_text">Top Comments</string>
    <string name="sort_created_text">Latest</string>
    <string name="stranger">Stranger</string>
    <string name="or">OR</string>
    <string name="click_back_again">Please&#160;click&#160;BACK&#160;again&#160;to&#160;exit</string>
    <string name="copy_to_clipboard">Copied to the clipboard</string>
    <string name="max_following_limitation">You have exceeded the max numbers of following others.</string>
    <string name="common_join">Join</string>
    <string name="share_title_post">%s\'s Welike post</string>
    <string name="share_title_post_whatsapp">See this Welike post by @%s</string>
    <string name="share_title_profile">%s\'s Welike profile</string>
    <string name="share_title_profile_whatsapp">Check out this awesome profile on Welike.</string>
    <string name="share_title_topic">Come and join the discussion on %s# in Welike!</string>
    <string name="share_title_topic_whatsapp">A lot of people are disscusing on %s#.Come and discuss about it.</string>
    <string name="share_title_app">Join Welike and discover the world around you</string>
    <string name="share_desc_post">Here\'s an interesting post on Welike! Check it out</string>
    <string name="share_desc_profile">Check out this awesome profile on Welike</string>
    <string name="share_desc_topic">%s invited you to disscuss in Welike</string>
    <string name="share_desc_app">Welike is an Indian social media platform. Create, discover and share your interests and life.</string>
    <string name="share_topic_pic_text">%s posts are discussing this hot topic on Welike!</string>
    <string name="share_post_download">Download to explore more FREE HD videos: https://welike.in/download</string>
    <string name="share_post_pic_download">Download to explore more FREE HD pics: https://welike.in/download</string>
    <string name="share_profile_download">Explore interesting people on Welike: https://welike.in/download</string>
    <string name="share_topic_download">Explore more trending topics on Welike: https://welike.in/download</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="shake">Shake &amp; Make friends</string>
    <string name="common_continue">Continue</string>
    <string name="notification_setting">Notification</string>
    <string name="notification_reminder">Notification&#160;Reminder</string>
    <string name="mute_at">\@</string>
    <string name="mute_comment">Comment</string>
    <string name="mute_follow">New Followers</string>
    <string name="mute_stranger">Message from strangers</string>
    <string name="mute_like">Like</string>
    <string name="mute_im_message_tips">From&#160;whom&#160;I\'ll&#160;receive&#160;messages</string>
    <string name="mute_im_message">Message&#160;from&#160;friend</string>
    <string name="mute_new_post_tips">Receive&#160;notification&#160;from&#160;people&#160;I\'m&#160;following</string>
    <string name="mute_new_post">New&#160;Post</string>
    <string name="mute_scheduled_tips">Do&#160;not&#160;disturb</string>
    <string name="mut_scheduled">Scheduled</string>
    <string name="mute_start">From</string>
    <string name="mute_end">To</string>
    <string name="Quiet_Hours">Quiet&#160;Hours</string>
    <string name="message_box_new">New</string>
    <string name="earlier">Earlier</string>
    <string name="splash_jump">%s Skip</string>
    <string name="splash_slogan">Desh Ka Social Media</string>
    <string name="more">more</string>
    <string name="more_upper">More</string>
    <string name="days">d&#160;</string>
    <string name="hour">h</string>
    <string name="later">Later</string>
    <string name="common_quit">Exit</string>
    <string name="hot">Hot</string>
    <string name="contact_title">New friends</string>
    <string name="contact_connect">Add contacts</string>
    <string name="in_your_contacts">in your contacts</string>
    <string name="contact_invite">Invite</string>
    <string name="contact">Contact</string>
    <string name="contacts">Contacts</string>
    <string name="contact_invite_friends">Invite Friends</string>
    <string name="contact_follow_all">Follow all</string>
    <string name="contact_header1">They are already on Welike</string>
    <string name="contact_header2">More friends more fun, invite them now!</string>
    <string name="contact_share_pre">Join me as a friend on Welike, so I can share my latest post,photo and video with you! </string>
    <string name="contact_empty">No contacts in your address book.</string>
    <string name="contact_invite_friend_by">Invite&#160;friends&#160;by default</string>
    <string name="common_privacy">Privacy</string>
    <string name="common_contact">Contacts</string>
    <string name="common_mobile_model">Mobile model</string>
    <string name="common_display_mobile_model">Display mobile model</string>
    <string name="common_display_mobile_model_info">The phone model will be shown in the post. If disabled, new post will no longer show your phone model.</string>
    <string name="common_privacy_info">More about your privacy: Privacy Policy</string>
    <string name="common_privacy_match">Privacy Policy</string>
    <string name="common_find_contacts">Notify mobile contacts</string>
    <string name="common_find_contacts_info">When enabled, you will be able to find your phone contacts on Welike.</string>
    <string name="common_follow_by_phone">Find me by phone number</string>
    <string name="common_follow_by_phone_info">Your friends can follow you through phone contacts.</string>
    <string name="new_task_title_welcome">Welcome to Welike</string>
    <string name="new_task_content_welcome">To be or not to be, a Weliker?</string>
    <string name="new_task_button_welcome">Become a Weliker</string>
    <string name="new_task_title_like">Become a Weliker</string>
    <string name="new_task_content_like">Bravo! Done</string>
    <string name="new_task_title_discover">Become a Weliker</string>
    <string name="new_task_content_discover">Awesome! Done</string>
    <string name="new_task_title_hot_post">Become a Weliker</string>
    <string name="new_task_content_hot_post">Bravo! Done</string>
    <string name="new_task_title_rank">Become a Weliker</string>
    <string name="new_task_content_rank">Awesome! Done</string>
    <string name="new_task_title_activity">Congratulations on getting iron medal</string>
    <string name="new_task_content_activity">Hey, Continue！</string>
    <string name="new_task_title_avatar">Be Welike Pro</string>
    <string name="new_task_content_avatar">Awesome! Done</string>
    <string name="new_task_title_introduction">Be Welike Pro</string>
    <string name="new_task_content_introduction">Bravo! Done</string>
    <string name="new_task_title_new_weliker_post">Be Welike Pro</string>
    <string name="new_task_content_new_weliker_post">Bravo! Done</string>
    <string name="new_task_title_task_list">Congratulations on getting copper medal</string>
    <string name="new_task_content_task_list">Check out</string>
    <string name="report">Report</string>
    <string name="report_select_reason">Choose&#160;your&#160;reason</string>
    <string name="report_reason1">Porn &#38; Nudity</string>
    <string name="report_reason2">Violation &#38; Harm</string>
    <string name="report_reason3">Annoying or Distasteful</string>
    <string name="report_reason4">Infringement &#38; Humiliation</string>
    <string name="report_reason5">Copyright Problem</string>
    <string name="report_reason_others">Others</string>
    <string name="editor_post_send">SEND</string>
    <string name="publish_draft_title">Draft</string>
    <string name="regist_get_start">Get&#160;Started</string>
    <string name="follow_recommend_user_title">Recommend for you</string>
    <string name="recommend_more_friend">Get More Friends</string>
    <string name="recommend_go_explore">Go to %s to explore</string>
    <string name="friend_face_to_face">Add Friends Nearby</string>
    <string name="friend_face_to_face_description">Welikers can be scanned and added only within 200 metres distance.</string>
</resources>