<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/title_layout"
    android:layout_width="match_parent"
    android:layout_height="@dimen/common_title_bar_height"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/iv_btn_back"
        android:layout_width="50dp"
        android:layout_height="0dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/common_back_btn" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/new_ui.title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/post"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/iv_btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_btn_draft_save"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:gravity="center"
        android:scaleType="center"
        android:text="@string/publish_draft_title"
        android:textColor="@color/publish_color_draft_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/tv_btn_send"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_btn_send"
        style="@style/new_ui.button_1"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_centerVertical="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/send_button_selector"
        android:enabled="false"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/editor_post_send"
        android:textColor="@color/send_color_button_text"
        android:textSize="14sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/bottom_line"
        style="@style/new_ui.div"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>