<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/header_title"
        style="@style/new_ui.text_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:text="@string/friend_face_to_face"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Invite Friends" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/face_to_face_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="center"
        android:textColor="@color/color_normal_48779D"
        android:textSize="14dp"
        app:layout_constraintBottom_toTopOf="@id/div_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/contact_face_to_face_bg"
        tools:text="Follow all" />

    <ImageView
        android:id="@+id/none"
        android:layout_width="4dp"
        android:layout_height="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/header_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/header_title"
        app:srcCompat="@drawable/common_bar_bg" />

    <TextView
        android:id="@+id/header_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:gravity="start"
        android:text="@string/friend_face_to_face_description"
        android:textColor="@color/main_grey"
        android:textSize="@dimen/common_text_size_12"
        app:layout_constraintEnd_toStartOf="@id/face_to_face_bg"
        app:layout_constraintStart_toStartOf="@+id/header_title"
        app:layout_constraintTop_toBottomOf="@+id/header_title" />

    <TextView
        android:id="@+id/face_to_face_start"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:gravity="center"
        android:text="@string/regist_get_start"
        android:textColor="@color/app_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/div_line" />

    <View
        android:id="@+id/div_line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/face_to_face_bg"
        android:background="@color/common_color_f8f8f8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</android.support.constraint.ConstraintLayout>