<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/common_divider_f6_color">

    <TextView
        android:id="@+id/home_big_card_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:textColor="@color/common_text_black_31"
        android:textStyle="bold"
        android:textSize="@dimen/common_text_size_16"
        android:text="@string/follow_recommend_user_title"
        android:layout_marginTop="8dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    
    <android.support.v7.widget.RecyclerView
        android:id="@+id/home_big_card_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="331dp"
        android:background="@color/white"
        android:paddingBottom="12dp"
        app:layout_constraintTop_toBottomOf="@id/home_big_card_title"
        app:layout_constraintLeft_toLeftOf="@id/home_big_card_title"
        app:layout_constraintRight_toRightOf="@id/home_big_card_title"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_divider_dp1"
        android:background="@color/common_divider_f5_color"
        app:layout_constraintTop_toBottomOf="@id/home_big_card_recycler_view"/>
    
    <RelativeLayout
        android:id="@+id/home_big_card_more_friend"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@id/divider"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="@dimen/common_text_size_16"
            android:textColor="@color/common_text_color_48779D"
            android:text="@string/recommend_more_friend"
            tools:text="Get More Friends"/>
        
        <android.support.v7.widget.AppCompatImageView
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:src="@drawable/common_left_arrow_icon"
            android:layout_centerVertical="true"
            android:scaleType="center"
            android:layout_marginRight="5dp"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@drawable/common_shadow_icon"
        app:layout_constraintTop_toBottomOf="@id/home_big_card_more_friend"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/home_big_card_go_trending"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/recommend_go_explore"
        android:textSize="14dp"
        android:textColor="@color/common_text_color_afb0b1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:text="Go to Trending to explore"/>

</android.support.constraint.ConstraintLayout>